# agent-ssh-cli

./: .gitignore  AI_INSTALL.md  LICENSE  README.md  README_EN.md  RELEASE_NOTES.md  SKILL.md  SKILLS.md  example.config.json  package-lock.json  package.json
.github/workflows/: build-native-packages.yml  publish.yml
native/: Cargo.toml
native/src/: main.rs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
scripts/: build-native-bin.js  build-native-package.js  test-cli.js
src/: cli.js  config.js  daemon-client.js  daemon-paths.js  ssh-client.js  ssh-daemon.js
