[package]
name = "agentsshcli-native"
version = "0.2.4"
edition = "2021"

[[bin]]
name = "agentsshcli-native"
path = "src/main.rs"

[dependencies]
libc = "0.2"
regex = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
url = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
interprocess = "2"
