[package]
name = "agentsshcli-native"
version = "0.2.7"
edition = "2021"

[[bin]]
name = "agentsshcli-native"
path = "src/main.rs"

[dependencies]
libc = "0.2"
regex = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
russh = "0.60.2"
russh-sftp = "2.1.2"
tokio = { version = "1.52.3", features = ["fs", "io-util", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
interprocess = "2"
