[package]
name = "agentsshcli-native"
version = "0.3.4"
edition = "2021"

[[bin]]
name = "agentsshcli-native"
path = "src/main.rs"

[dependencies]
libc = "0.2"
base64 = "0.22"
chacha20poly1305 = "0.10"
regex = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
russh = "0.60.2"
russh-sftp = "2.1.2"
tokio = { version = "1.52.3", features = ["fs", "io-util", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
interprocess = "2"
